Correcting position disconnect button on mobile version

--- a/assets/styles/layout/_menu.scss
+++ b/assets/styles/layout/_menu.scss
@@ -67,7 +67,7 @@ ul .menu-item {
 
   &-bottom {
     position: absolute;
-    bottom: 2.8rem;
+    bottom: 3.8rem;
   }
 }
 
